minha-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: minha-pod
  namespace: meunamespace
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
