meu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meu-deployment
  namespace: meunamespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meuapp
  template:
    metadata:
      labels:
        app: meuapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: meu-service
  namespace: meunamespace
spec:
  selector:
    app: meuapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
