meu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-service
  namespace: meunamespace
spec:
  selector:
    app: meuapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
